charts/kustomize/base/fag-daemonset-otel.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fag-otel
  labels:
    app: fag-otel
spec:
  selector:
    matchLabels:
      app: fag-otel
  template:
    metadata:
      labels:
        app: fag-otel
    spec:
      # tolerations:
      #   - key: node-role.kubernetes.io/master
      #     effect: NoSchedule
      containers:
        - name: fag-otel
          image: otel/opentelemetry-collector:latest
          resources:
            limits:
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 200Mi
          ports:
            - containerPort: 4317
              name: otlp-grpc
            - containerPort: 4318
              name: otlp-http
            - containerPort: 55680
              name: otlp-opencensus
            - containerPort: 8888
              name: otlp-metrics
            - containerPort: 8889
              name: otlp-debug
      terminationGracePeriodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  name: fag-otel
spec:
  selector:
    app: fag-otel
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
    - name: otlp-grpc
      protocol: TCP
      port: 4317
      targetPort: 4317
    - name: otlp-http
      protocol: TCP
      port: 4318
      targetPort: 4318
    - name: otlp-opencensus
      protocol: TCP
      port: 55680
      targetPort: 55680
    - name: otlp-metrics
      protocol: TCP
      port: 8888
      targetPort: 8888
