charts/kustomize/base/fag-deployment-order-rpc-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fag-order-rpc-engine
  labels:
    app: fag-order-rpc-engine
spec:
  selector:
    matchLabels:
      app: fag-order-rpc-engine
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: fag-order-rpc-engine
    spec:
      serviceAccountName: fag-sa
      containers:
        - name: fag-order-rpc-engine
          image: sklrsn/order-rpc-engine:latest
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          livenessProbe:
            tcpSocket:
              port: 9091
            initialDelaySeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          ports:
            - containerPort: 9091
              name: fag-order-rpc
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: fag-order-rpc-engine
spec:
  selector:
    app: fag-order-rpc-engine
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
    - name: fag-order-rpc-engine
      protocol: TCP
      port: 9091
      targetPort: 9091
