charts/kustomize/base/fag-deployment-payment-rpc-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fag-payment-rpc-engine
  labels:
    app: fag-payment-rpc-engine
spec:
  selector:
    matchLabels:
      app: fag-payment-rpc-engine
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: fag-payment-rpc-engine
    spec:
      containers:
        - name: fag-payment-rpc-engine
          image: sklrsn/payment-rpc-engine:latest
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          livenessProbe:
            tcpSocket:
              port: 9092
            initialDelaySeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          ports:
            - containerPort: 9092
              name: fag-payment-rpc
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: fag-payment-rpc-engine
spec:
  selector:
    app: fag-payment-rpc-engine
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
    - name: fag-payment-rpc
      protocol: TCP
      port: 9092
      targetPort: 9092
