charts/kustomize/base/fag-ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-loki-grafana
namespace: loki
spec:
  ingressClassName: nginx
  rules:
    - host: www.sklrsn.in
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: loki-grafana
                port:
                  number: 80
            path: /
  tls:
    - hosts:
        - www.sklrsn.in
      secretName: tls-secret-nginx-grafana
